<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <!-- android:layout_height="fill_parent" -->

    <RelativeLayout
        android:id="@+id/mainRelative"
        android:layout_width="wrap_content"
        android:layout_height="590dp"
        android:contentDescription="@string/imagePreview"
        tools:context=".PsugoMainActivity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dept"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/nomEcole"
            android:layout_below="@+id/nomEcole"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/departement" />

        <EditText
            android:id="@+id/arrondissement"
            android:layout_width="wrap_content"
             android:layout_height="35dp"
            android:layout_alignLeft="@+id/adrEcole"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/dept"
            android:ems="10"
            android:hint="@string/arrondissement" />

        <Spinner
            android:id="@+id/nomEcole"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="true"
            android:completionThreshold="1"
			android:dropDownHeight="200dp"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/nomEcole"  />


        <!-- android:text="@string/actionSchoolPic" />  the previous works as we see the camera icon -->

        <Button
            android:id="@+id/actionAddDirects"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/actionAddDirecteurs" />

        <Button
            android:id="@+id/actionAddClasses"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/actionAddDirects"
            android:text="@string/actionAddClasses" />

        <Button
            android:id="@+id/actionUploadData"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/actionAddClasses"
            android:text="@string/actionUploadData" />

        <Spinner
            android:id="@+id/instCommune"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_height="40dp"
            android:layout_below="@+id/arrondissement"
            android:ems="10"
            android:hint="@string/commune"
            android:inputType="text" />

        <Spinner
            android:id="@+id/sectCommunale"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/instCommune"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/sectCommunale"
            android:inputType="text|textCapWords" />

        <EditText
            android:id="@+id/adrEcole"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sectCommunale"
            android:ems="10"
            android:hint="@string/adresse"
            android:inputType="text|textCapWords" />

        <EditText
            android:id="@+id/adrDetaillee"
            android:layout_width="match_parent"
             android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/adrEcole"
            android:ems="10"
            android:hint="@string/adresseDet" />

        <EditText
            android:id="@+id/phoneEcole"
            android:layout_width="wrap_content"
             android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/adrDetaillee"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
             android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/phoneEcole"
            android:layout_marginTop="37dp"
            android:text="@string/ecoleTrouvee"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/ecoleTrouveeList"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:entries="@array/ecole_trouvee_array"
            android:prompt="@string/ecoleTrouvee"/>

        <Button
            android:id="@+id/actionSchoolPic"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ecoleTrouveeList"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/camera"
         />

        <EditText
            android:id="@+id/infoBancaire"
            android:layout_width="wrap_content"
             android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/phoneEcole"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/infoBancaire"
            android:inputType="number" />

            <Button
                android:id="@+id/cin"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/actionSchoolPic"
                android:layout_alignBottom="@+id/actionSchoolPic"
                android:layout_alignRight="@+id/actionAddClasses"
                android:drawableLeft="@drawable/notes" />

            <Button
                android:id="@+id/actionSave"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/actionUploadData"
                android:text="@string/Ok" />

            <Button
                android:id="@+id/actionDone"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/actionSave"
                android:text="@string/actionDone" />

    </RelativeLayout>

</ScrollView>