<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroller_classe"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="649dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/classeTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/actionFinishClasse"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/actionAddClasse"
            android:layout_toRightOf="@+id/nbrEleve"
            android:drawableLeft="@drawable/navigation_back" />

        <EditText
            android:id="@+id/nbrEleve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nomClasse"
            android:ems="10"
            android:hint="@string/nbrEleve"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/photoClasse"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nbrEleve"
            android:drawableLeft="@drawable/small_camera_48"
            android:text="@string/photoClasse" />

        <EditText
            android:id="@+id/nomClasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:ems="10"
            android:hint="@string/nomClasse"
            android:inputType="textPersonName" >
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/actionProfPics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/phoneProf"
            android:drawableLeft="@drawable/camera"
            android:text="@string/photoProf" />

        <EditText
            android:id="@+id/phoneProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/emailProf"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/emailProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cinProf"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/nomProfClasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:hint="@string/nomProfClasse"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/genreProfList"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:entries="@array/genre_humain_array"
            android:prompt="@string/genre_prompt"
            android:textSize="14pt" />

        <EditText
            android:id="@+id/cinProf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/genreProfList"
            android:ems="10"
            android:hint="@string/cin"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/photoClasse"
            android:text="@string/profTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nomProfClasse"
            android:text="@string/genre"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/previewClasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/actionFinishClasse"
            android:drawableLeft="@drawable/camera_add" />

        <Button
            android:id="@+id/actionAddClasse"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/previewClasses"
            android:drawableLeft="@drawable/social_add_person"
            android:focusable="false" />

    </RelativeLayout>

</ScrollView>