<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroller_direct"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="556dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/directTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nomDir"
            android:layout_toLeftOf="@+id/actionDirectPics"
            android:text="@string/typeDirecteur"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/cinDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/phoneDir"
            android:ems="10"
            android:hint="@string/cin"
            android:inputType="number" />

        <EditText
            android:id="@+id/phoneDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/emailDir"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" >

          
        </EditText>

        <EditText
            android:id="@+id/emailDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/genreDirList"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/typeDirecteurList"
            android:text="@string/genre"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/genreDirList"
            android:layout_width="wrap_content"
             android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:entries="@array/genre_humain_array"
            android:prompt="@string/genre_prompt"
            android:textSize="14pt" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nomDir"
            android:text="@string/typeDirecteur"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/typeDirecteurList"
            android:layout_width="wrap_content"
             android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView4"
            android:entries="@array/type_directeur_array"
            android:prompt="@string/type_directeur_prompt"
            android:textSize="14pt" />

        <Button
            android:id="@+id/actionDirectPics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cinDir"
            android:drawableLeft="@drawable/camera" />

        <Button
            android:id="@+id/actionFinishDirect"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/phoneDir"
            android:drawableLeft="@drawable/arrow_right" />

        <Button
            android:id="@+id/actionPreviewDir"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/actionFinishDirect"
            android:drawableLeft="@drawable/preview_file" />

        <Button
            android:id="@+id/actionAddDir"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/actionPreviewDir"
            android:drawableLeft="@drawable/add2"
            android:focusable="false" />

        <EditText
            android:id="@+id/nomDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:hint="@string/nomPersonne"
            android:inputType="textPersonName"
            android:textSize="@dimen/activity_horizontal_margin" >

        </EditText>

        <Spinner
            android:id="@+id/dirList"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    </RelativeLayout>

</ScrollView>